--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
                     </div>
                     <div class="underline-dark"></div>
                     <div class="row grid gallery">
-                        <div class="col-sm-3 all c2">
-                            <a href="./portfolio.html#portfolio">
+                        <div class="col-sm-3 all c3">
+                            <a href="https://colab.research.google.com/drive/1FOgoA3TKnHlG3v6TzaaSue5GkCoCRpKh?usp=sharing">
                                 <figure class="gallery__item">
-                                    <img src="img/portfolio/img-1.jpg" alt="Gallery image 1" class="gallery__img">
+                                    <img src="img/portfolio/fitness_tracker.jpg" alt="fitness_tracker" class="gallery__img">
                                     <div class="overlay">
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Book cover design</h3>
-                                                    <p>Brand</p>
+                                                    <h3>Estudo de Caso: Bellabeat</h3>
+                                                    <p>R</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
                                             </div>
@@ -437,15 +437,16 @@
                             <h1>
                                 <span class="highlighted">My</span> name <br> is Crislane
                             </h1>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ab ad facilis quia nobis
-                                possimus odit architecto animi in non fugiat debitis quod error quas placeat temporibus
-                                porro totam dolorem consequuntur sint, modi quibusdam perspiciatis? Natus ut,
-                                repellendus
-                                quae incidunt eveniet laborum aut minus reprehenderit beatae amet cumque totam magni.
-                            </p>
+                            <p> I have a degree in marketing and a passion for technology, and I found data analysis to be the perfect combination to achieve high performance.</p>
+                            <p> Experience in developing reports and dashboards to monitor the progress of initiatives, using spreadsheets, databases and data visualization tools to analyze and extract insights. 
+                                I have knowledge of Python, R and SQL programming languages ​​focused on data analysis. 
+                                Furthermore, I have experience in planning and controlling budgets for resource optimization and database management, ensuring data integrity and quality.</p>
+                            <p> With more than 10 years of experience in the marketing area, I participated in the development of visual identity, preparation and monitoring of online and offline campaigns. 
+                                I also implemented and managed websites, blogs and relationship rules, focusing on content strategies and search engine optimization (SEO).</p>
+                            <p> I worked on projects with multidisciplinary teams, interacting with commercial and IT areas, ensuring harmonious collaboration to achieve established objectives.</p>
                         </div>
                         <div class="col-12 col-md-3">
-                            <img class="img-fluid" src="img/me.jpg" alt="Team Work">
+                            <img class="img-fluid" src="img/IMG_7529.JPG" alt="">
                         </div>
                         <div class="underline-dark"></div>
                     </div>
@@ -462,7 +463,7 @@
                         </div>
                         <div class="col">
                             <p>
-                                Contact me via mail<br>
+                                My mail<br>
                                 <a href="mailto:crislane.silva@gmail.com">crislane.silva@gmail.com</a>
                             </p>
                         </div>
@@ -473,7 +474,10 @@
                             </p>
                         </div>
                     </div>
-                    <div class="contact-form col-12">
+                    <div class="social-media">
+
+                    </div> 
+                    <!-- <div class="contact-form col-12">
                         <form action="mailto:example@example.com" method="post" class="needs-validation" novalidate>
                             <div class="form-group mt-5">
                                 <label class="col-12">Full name</label>
@@ -502,7 +506,7 @@
                                 </div>
                             </div>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
