--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                                 <div class="col">
                                     <button class="btn-portfolio" data-filter=".c3">R</button>
                                 </div>
+                                <div class="col">
+                                    <button class="btn-portfolio" data-filter=".c4">SQL</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -93,7 +96,7 @@
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Estudo de Caso: Bellabeat</h3>
+                                                    <h3>Case study: Bellabeat</h3>
                                                     <p>R</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
@@ -103,16 +106,16 @@
                                 </figure>
                             </a>
                         </div>
-                        <div class="col-sm-3 all c1">
-                            <a href="./portfolio.html#portfolio">
+                        <div class="col-sm-3 all c2">
+                            <a href="https://colab.research.google.com/drive/18USq9kBRg_IzvfdRl0evD-5zA7FLrXKX?usp=sharing">
                                 <figure class="gallery__item">
-                                    <img src="img/portfolio/img-2.jpg" alt="Gallery image 2" class="gallery__img">
+                                    <img src="img/portfolio/aereo.jpg" alt="" class="gallery__img">
                                     <div class="overlay">
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Project name</h3>
-                                                    <p>Category</p>
+                                                    <h3>Case study: Setor Aéreo EUA</h3>
+                                                    <p>Python</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
                                             </div>
@@ -121,7 +124,7 @@
                                 </figure>
                             </a>
                         </div>
-                        <div class="col-sm-3 all c2">
+                        <!-- <div class="col-sm-3 all c2">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-3.jpg" alt="Gallery image 3" class="gallery__img">
@@ -138,8 +141,8 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div>
-                        <div class="col-sm-3 all c3">
+                        </div> -->
+                        <!-- <div class="col-sm-3 all c3">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-4.jpg" alt="Gallery image 4" class="gallery__img">
@@ -156,8 +159,8 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div>
-                        <div class="col-sm-3 all c2">
+                        </div> -->
+                        <!-- <div class="col-sm-3 all c2">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-5.jpg" alt="Gallery image 5" class="gallery__img">
@@ -174,8 +177,8 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div>
-                        <div class="col-sm-3 all c2">
+                        </div> -->
+                        <!-- <div class="col-sm-3 all c2">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-6.jpg" alt="Gallery image 6" class="gallery__img">
@@ -210,8 +213,8 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div>
-                        <div class="col-sm-3 all c3">
+                        </div> -->
+                        <!-- <div class="col-sm-3 all c3">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-8.jpg" alt="Gallery image 8" class="gallery__img">
@@ -336,7 +339,7 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 </figure>
@@ -446,7 +449,7 @@
                             <p> I worked on projects with multidisciplinary teams, interacting with commercial and IT areas, ensuring harmonious collaboration to achieve established objectives.</p>
                         </div>
                         <div class="col-12 col-md-3">
-                            <img class="img-fluid" src="img/IMG_7529.JPG" alt="">
+                            <img class="img-fluid" src="img/foto_perfil.JPG" alt="">
                         </div>
                         <div class="underline-dark"></div>
                     </div>
