--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </figure>
                             </a>
                         </div>
-                        <!-- <div class="col-sm-3 all c2">
+                        <div class="col-sm-3 all c4">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
                                     <img src="img/portfolio/img-3.jpg" alt="Gallery image 3" class="gallery__img">
@@ -132,8 +132,8 @@
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Project name</h3>
-                                                    <p>Category</p>
+                                                    <h3>Test</h3>
+                                                    <p>SQL</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
                                             </div>
@@ -141,7 +141,7 @@
                                     </div>
                                 </figure>
                             </a>
-                        </div> -->
+                        </div>
                         <!-- <div class="col-sm-3 all c3">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
