skills inclusion and pt version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <span class="highlighted"></span>Crislane <span class="highlighted"></span>Silva <span
-                    class="highlighted">|</span> Data Analytics
+                    class="highlighted">|</span> Analista de Dados
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,10 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ms-auto">
                     <a class="nav-item nav-link active px-4" href="#home">Home</a>
-                    <a class="nav-item nav-link px-4" href="#portfolio">Portfolio</a>
-                    <a class="nav-item nav-link px-4" href="#expertize">Skills</a>
-                    <a class="nav-item nav-link px-4" href="#about">About</a>
-                    <a class="nav-item nav-link px-4" href="#contact">Contact</a>
+                    <a class="nav-item nav-link px-4" href="#portfolio">Portfólio</a>
+                    <a class="nav-item nav-link px-4" href="#expertize">Habilidades</a>
+                    <a class="nav-item nav-link px-4" href="#about">Sobre</a>
+                    <a class="nav-item nav-link px-4" href="#contact">Contato</a>
                 </div>
             </div>
         </div>
@@ -52,7 +52,7 @@
             <div class="hero-shadow"></div>
             <div class="hero-text">
                 <h1>
-                    <span class="highlighted">Pr</span>ojects <br>
+                    <span class="highlighted">Pr</span>ojetos<br>
                 </h1>
                 <a href="#portfolio"> <i class="bi bi-arrow-down"></i> </a>
             </div>
@@ -64,12 +64,12 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center menu">
                         <div class="col-4">
-                            <h1><span class="highlighted">My</span> portfolio</h1>
+                            <h1><span class="highlighted">Meu</span> portfólio</h1>
                         </div>
                         <div class="col-lg-6 text-center">
                             <div id="filters" class="row">
                                 <div class="col">
-                                    <button class="btn-portfolio active" data-filter="*">All</button>
+                                    <button class="btn-portfolio active" data-filter="*">Todos</button>
                                 </div>
                                 <div class="col">
                                     <button class="btn-portfolio" data-filter=".c1">Dashboards</button>
@@ -96,7 +96,7 @@
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Case study: Bellabeat</h3>
+                                                    <h3>Estudo de caso: Bellabeat</h3>
                                                     <p>R</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
@@ -114,7 +114,7 @@
                                         <div class="text">
                                             <div class="row">
                                                 <div class="col-7 offset-1">
-                                                    <h3>Case study: Setor Aéreo EUA</h3>
+                                                    <h3>Estudo de caso: Setor Aéreo EUA</h3>
                                                     <p>Python</p>
                                                 </div>
                                                 <div class="col-3"><i class="bi bi-arrow-up"></i></div>
@@ -124,6 +124,7 @@
                                 </figure>
                             </a>
                         </div>
+                        <!--
                         <div class="col-sm-3 all c4">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
@@ -142,6 +143,7 @@
                                 </figure>
                             </a>
                         </div>
+                        -->
                         <!-- <div class="col-sm-3 all c3">
                             <a href="./portfolio.html#portfolio">
                                 <figure class="gallery__item">
@@ -366,19 +368,10 @@
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Experiência em extrair, organizar e analisar grandes volumes de dados
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Non quod repellendus sint distinctio temporibus
-                                    facere cum totam qui voluptatibus? Lorem ipsum dolor sit amet consectetur
-                                    adipisicing
-                                    elit. Blanditiis aspernatur, corporis voluptates nulla accusamus debitis sequi
-                                    repellendus eum officiis quam aut, rem aliquam aliquid aperiam illum eius fugit vel?
-                                    Sunt ea laudantium, modi recusandae necessitatibus labore ab optio aspernatur
-                                    aperiam
-                                    quis odit qui itaque eligendi, deserunt consequuntur saepe voluptas, atque delectus.
-                                    Sit
-                                    repudiandae repellat dolore debitis?
+                                    Experiência em extrair, organizar e analisar grandes volumes de dados. Execução de processos ETL (Extract, Transform, Load) garantindo a qualidade e integridade das informações. Proficiente em consultas SQL para extração de insights, criação de relatórios e manipulação de dados, incluindo o uso de funções e stored procedures. Conhecimento em BigQuery, bancos de dados relacionais (MySQL), administração, configuração, gerenciamento, backups e recuperação de bancos de dados. 
                                 </span>
                             </p>
                         </div>
@@ -393,13 +386,10 @@
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
-                                Aspernatur cupiditate architecto voluptatibus totam dolore distinctio.
+                                Conhecimento em linguagens Python, R e SQL para análise de dados
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Non quod repellendus sint distinctio temporibus
-                                    facere cum totam qui voluptatibus? Aspernatur cupiditate architecto voluptatibus
-                                    totam dolore distinctio veritatis earum tenetur at vero, error esse molestias
-                                    possimus fugit ad harum tempora? In.
+                                    Conhecimento em linguagens Python, R e SQL para análise de dados. Habilidade em limpeza, organização e transformação de dados com Pandas e PySpark. Visualização de dados utilizando as bibliotecas Matplotlib e Seaborn. Conhecimento básico em machine learning, utilizando Scikit-learn e Oracle ADS para desenvolver e validar modelos na nuvem.
                                 </span>
                             </p>
                         </div>
@@ -414,12 +404,10 @@
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
-                                Non quod repellendus sint distinctio.
+                                Habilidade em desenvolver visualizações de dados e apresentar descobertas
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Aspernatur cupiditate architecto voluptatibus
-                                    totam dolore distinctio veritatis earum tenetur at vero, error esse molestias
-                                    possimus fugit ad harum tempora? In.
+                                    Habilidade em desenvolver visualizações de dados e apresentar descobertas de forma clara e impactante. Transformação de dados brutos em visuais compreensíveis e atraentes com ferramentas como Excel, Power BI, Looker Studio e Tableau. Criação de dashboards interativos que comunicam insights de forma concisa e impulsionam decisões estratégicas. Uso de Matplotlib e Seaborn em Python e ggplot em R para visualizações técnicas.
                                 </span>
                             </p>
                         </div>
@@ -440,13 +428,18 @@
                             <h1>
                                 <span class="highlighted">My</span> name <br> is Crislane
                             </h1>
-                            <p> I have a degree in marketing and a passion for technology, and I found data analysis to be the perfect combination to achieve high performance.</p>
-                            <p> Experience in developing reports and dashboards to monitor the progress of initiatives, using spreadsheets, databases and data visualization tools to analyze and extract insights. 
-                                I have knowledge of Python, R and SQL programming languages ​​focused on data analysis. 
-                                Furthermore, I have experience in planning and controlling budgets for resource optimization and database management, ensuring data integrity and quality.</p>
-                            <p> With more than 10 years of experience in the marketing area, I participated in the development of visual identity, preparation and monitoring of online and offline campaigns. 
-                                I also implemented and managed websites, blogs and relationship rules, focusing on content strategies and search engine optimization (SEO).</p>
-                            <p> I worked on projects with multidisciplinary teams, interacting with commercial and IT areas, ensuring harmonious collaboration to achieve established objectives.</p>
+                            <p>
+                                Sou pós-graduada em marketing e apaixonada por tecnologia, e descobri na análise de dados a combinação perfeita para alcançar alta performance.
+                            </p>
+                            <p>
+                                Tenho experiência na gestão e manipulação de bases de dados, desenvolvimento de relatórios e dashboards utilizando planilhas. Conhecimento em bancos de dados (MySQL e BigQuery), processo de ETL (Extração, Transformação e Carregamento) e pré-processamento com linguagens de programação SQL, Python e R, além de ferramentas de visualização e plataformas de serviços em cloud, como GCP e OCI.
+                            </p>
+                            <p>
+                                Possuo mais de 10 anos de experiência na área de marketing, trabalhei no planejamento e controle de budget para otimização de recursos, desenvolvimento de identidade visual, elaboração e acompanhamento de campanhas online e offline. Tenho experiência na implementação e gestão de sites, blogs e estratégias de relacionamento, com foco em conteúdo e otimização para mecanismos de busca (SEO). 
+                            </p>
+                            <p>
+                                Atuei em projetos com equipes multidisciplinares, interagindo com áreas comerciais e de TI, garantindo uma colaboração harmoniosa para atingir os objetivos estabelecidos. 
+                            </p>
                         </div>
                         <div class="col-12 col-md-3">
                             <img class="img-fluid" src="img/foto_perfil.JPG" alt="">
