--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a class="nav-item nav-link px-4" href="#portfolio">Portfólio</a>
                     <a class="nav-item nav-link px-4" href="#expertize">Habilidades</a>
                     <a class="nav-item nav-link px-4" href="#about">Sobre</a>
-                    <a class="nav-item nav-link px-4" href="#contact">Contato</a>
+                    <a class="nav-item nav-link px-4" href="#contact">Contatos</a>
                 </div>
             </div>
         </div>
@@ -362,57 +362,75 @@
         <section id="expertize">
             <div class="expertize">
                 <div class="container">
-                    <div class="row item" data-text="web-design">
+                    <div class="row item" data-text="dados">
                         <div class="col-12 col-sm-4">
-                            <h1><span class="highlighted">Da</span>tabase</h1>
+                            <h1><span class="highlighted">Ba</span>se de dados</h1>
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
-                                Experiência em extrair, organizar e analisar grandes volumes de dados
+                                Experiência em extrair, organizar e analisar grandes volumes de dados.
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Experiência em extrair, organizar e analisar grandes volumes de dados. Execução de processos ETL (Extract, Transform, Load) garantindo a qualidade e integridade das informações. Proficiente em consultas SQL para extração de insights, criação de relatórios e manipulação de dados, incluindo o uso de funções e stored procedures. Conhecimento em BigQuery, bancos de dados relacionais (MySQL), administração, configuração, gerenciamento, backups e recuperação de bancos de dados. 
+                                    Execução de processos ETL (Extract, Transform, Load) garantindo a qualidade e integridade das informações. Proficiente em consultas SQL para extração de insights, criação de relatórios e manipulação de dados, incluindo o uso de funções e stored procedures. Conhecimento em BigQuery, bancos de dados relacionais (MySQL), administração, configuração, gerenciamento, backups e recuperação de bancos de dados. 
                                 </span>
                             </p>
                         </div>
                         <div class="col-3 col-sm-2 text-center">
-                            <button class="plus" onclick="readMore('web-design')"><i class="bi bi-plus-lg"></i></button>
+                            <button class="plus" onclick="readMore('dados')"><i class="bi bi-plus-lg"></i></button>
                         </div>
                     </div>
                     <div class="underline-light"></div>
-                    <div class="row item" data-text="brand">
+                    <div class="row item" data-text="estatistica">
                         <div class="col-12 col-sm-4">
-                            <h1><span class="highlighted">Pr</span>ogramming language</h1>
+                            <h1><span class="highlighted">Es</span>tatística</h1>
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
-                                Conhecimento em linguagens Python, R e SQL para análise de dados
+                                Conhecimento em estatística aplicada à análise de dados,
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Conhecimento em linguagens Python, R e SQL para análise de dados. Habilidade em limpeza, organização e transformação de dados com Pandas e PySpark. Visualização de dados utilizando as bibliotecas Matplotlib e Seaborn. Conhecimento básico em machine learning, utilizando Scikit-learn e Oracle ADS para desenvolver e validar modelos na nuvem.
+                                    estatística descritiva, probabilidade, amostragem, testes de hipóteses, correlação e regressão. Uso das bibliotecas NumPy e Statsmodels do Python para modelagem estatística avançada, proporcionando insights valiosos para a tomada de decisões.
                                 </span>
                             </p>
                         </div>
                         <div class="col-3 col-sm-2 text-center">
-                            <button class="plus" onclick="readMore('brand')"><i class="bi bi-plus-lg"></i></button>
+                            <button class="plus" onclick="readMore('estatistica')"><i class="bi bi-plus-lg"></i></button>
                         </div>
                     </div>
                     <div class="underline-light"></div>
-                    <div class="row item" data-text="social-media">
+                    <div class="row item" data-text="linguagem">
                         <div class="col-12 col-sm-4">
-                            <h1><span class="highlighted">Vi</span>sualization</h1>
+                            <h1><span class="highlighted">Li</span>nguagem de programação</h1>
+                        </div>
+                        <div class="col-8 col-sm-6">
+                            <p>
+                                Conhecimento em linguagens Python, R e SQL para análise de dados.
+                                <span class="dots">...</span>
+                                <span class="more" style="display: none;">
+                                Habilidade em limpeza, organização e transformação de dados com Pandas e PySpark. Visualização de dados utilizando as bibliotecas Matplotlib e Seaborn. Conhecimento básico em machine learning, utilizando Scikit-learn e Oracle ADS para desenvolver e validar modelos na nuvem.
+                                </span>
+                            </p>
+                        </div>
+                        <div class="col-3 col-sm-2 text-center">
+                            <button class="plus" onclick="readMore('linguagem')"><i class="bi bi-plus-lg"></i></button>
+                        </div>
+                    </div>
+                    <div class="underline-light"></div>
+                    <div class="row item" data-text="dataviz">
+                        <div class="col-12 col-sm-4">
+                            <h1><span class="highlighted">Vi</span>sualização</h1>
                         </div>
                         <div class="col-8 col-sm-6">
                             <p>
                                 Habilidade em desenvolver visualizações de dados e apresentar descobertas
                                 <span class="dots">...</span>
                                 <span class="more" style="display: none;">
-                                    Habilidade em desenvolver visualizações de dados e apresentar descobertas de forma clara e impactante. Transformação de dados brutos em visuais compreensíveis e atraentes com ferramentas como Excel, Power BI, Looker Studio e Tableau. Criação de dashboards interativos que comunicam insights de forma concisa e impulsionam decisões estratégicas. Uso de Matplotlib e Seaborn em Python e ggplot em R para visualizações técnicas.
+                                     de forma clara e impactante. Transformação de dados brutos em visuais compreensíveis e atraentes com ferramentas como planilhas (Excel e Sheets), Power BI, Looker Studio e Tableau. Criação de dashboards interativos que comunicam insights de forma concisa e impulsionam decisões estratégicas. Uso de Matplotlib e Seaborn em Python e ggplot em R para visualizações técnicas.
                                 </span>
                             </p>
                         </div>
                         <div class="col-3 col-sm-2 text-center">
-                            <button class="plus" onclick="readMore('social-media')"><i
+                            <button class="plus" onclick="readMore('dataviz')"><i
                                     class="bi bi-plus-lg"></i></button>
                         </div>
                     </div>
@@ -426,14 +444,16 @@
                     <div class="row justify-content-between">
                         <div class="col-12 col-md-8">
                             <h1>
-                                <span class="highlighted">My</span> name <br> is Crislane
+                                <span class="highlighted">Meu</span> nome <br>é Crislane
                             </h1>
                             <p>
                                 Sou pós-graduada em marketing e apaixonada por tecnologia, e descobri na análise de dados a combinação perfeita para alcançar alta performance.
                             </p>
+                            <!--
                             <p>
                                 Tenho experiência na gestão e manipulação de bases de dados, desenvolvimento de relatórios e dashboards utilizando planilhas. Conhecimento em bancos de dados (MySQL e BigQuery), processo de ETL (Extração, Transformação e Carregamento) e pré-processamento com linguagens de programação SQL, Python e R, além de ferramentas de visualização e plataformas de serviços em cloud, como GCP e OCI.
                             </p>
+                            -->
                             <p>
                                 Possuo mais de 10 anos de experiência na área de marketing, trabalhei no planejamento e controle de budget para otimização de recursos, desenvolvimento de identidade visual, elaboração e acompanhamento de campanhas online e offline. Tenho experiência na implementação e gestão de sites, blogs e estratégias de relacionamento, com foco em conteúdo e otimização para mecanismos de busca (SEO). 
                             </p>
@@ -455,17 +475,17 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-md-4">
-                            <h1>Contact</h1>
+                            <h1>Contatos</h1>
                         </div>
                         <div class="col">
                             <p>
-                                My mail<br>
+                                Meu e-mail<br>
                                 <a href="mailto:crislane.silva@gmail.com">crislane.silva@gmail.com</a>
                             </p>
                         </div>
                         <div class="col">
                             <p>
-                                My phone <br>
+                                Meu celular<br>
                                 <a href="tel:+55-11-99908-2202">+55 11 99908-2202</a>
                             </p>
                         </div>
