--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6LKNLLTZK"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y6LKNLLTZK');
+    </script>
+
 </head>
 
 <body data-spy="scroll" data-target="#navbar">
