--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Firmbee.com - Free Project Management Platform for remote teams">
-    <title>Name of company</title>
+    <title>Portfólio Crislane Silva</title>
+    <link rel="icon" href="favicon.png" type="image/png">
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
