--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
             </div>
         </div>
     </nav>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TTB7WF7J"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+     
     <header id="home">
         <div class="hero-img">
             <div class="hero-shadow"></div>
