Ajustes no arquivo style.css

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <div class="row justify-content-between">
                         <div class="col-12 col-md-8">
                             <h1>
-                                <span class="highlighted">Meu</span> nome <br>é Crislane
+                                <span class="highlighted">Sobre</span> mim
                             </h1>
                             <p>
                                 Sou pós-graduada em marketing e apaixonada por tecnologia, e descobri na análise de dados a combinação perfeita para alcançar alta performance.
